Overflow fix

--- a/css/miscStyles.css
+++ b/css/miscStyles.css
@@ -2,7 +2,6 @@ html{
     background-color: black;
 }
 body{
-    overflow: hidden;
 }
 @font-face {
     font-family: 'DosisBold';
